[package]
name = "nart"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
cast = "0.2"
line_drawing = "0.7"
more-asserts = "0.2"
rusttype = "0.7.5"

[dependencies.failure]
default-features = false
features = ["std"]
version = "0.1"

[dependencies.minifb]
git = "https://github.com/emoon/rust_minifb"
# master
rev = "2b8094cc6ce7fefeb322a8b4df09e0c978efd5e2"

[dependencies.png]
# avoiding encoder
default-features = false
# 0.14 breaks default-features = false, fixed when 0.14.1 gets released
version = "0.13"

[dev-dependencies]
rand_core = "0.4"
rand_xoshiro = "0.1"
